--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -15,7 +15,7 @@
 
 #lean_overlay {
     position: fixed;
-    z-index: 1031;
+    z-index: 901;
     top: 0px;
     left: 0px;
     height:100%;
